--- a/paper.tex
+++ b/paper.tex
@@ -28,7 +28,7 @@
 %
 
 %%% Put your own title + short title here:
-\title{Multiplicity dependent flow and jet fragmentation in pp at ${\sqrt{{\textit s}}}=\mathbf{13}$~TeV and in p--Pb collisions at ${\sqrt{{\textit s_\mathrm{NN}}}} = \mathbf{5.02}$~TeV and their event-scale dependence}
+\title{Multiplicity- and event-scale dependent flow and jet fragmentation in pp collisions at ${\sqrt{{\textit s}}}=\mathbf{13}$~TeV and in p--Pb collisions at ${\sqrt{{\textit s_\mathrm{NN}}}} = \mathbf{5.02}$~TeV}
 \ShortTitle{Flow and jets in pp and p--Pb collisions in small systems}   % appears on right page headers
 
 %%% Do not change the next lines
@@ -37,8 +37,8 @@
 
 \begin{abstract}
 %\input{abstract.tex}
-Long- and short-range correlations for pairs of charged particles with two-particle angular correlations are studied in pp at ${\sqrt{{\textit s}}}=13$~TeV and p--Pb collisions at ${\sqrt{s_\mathrm{NN}}} = 5.02$~TeV. The correlation functions are measured as functions of relative azimuthal angle $\Delta\varphi$ and pseudorapidity separation $\Delta\eta$ for pairs of primary charged particles within the pseudorapidity interval $|\eta| < 0.9$ and the transverse momentum interval 1~$ < \pt < $~4~GeV/$c$.
-Fourier coefficients are extracted for the long-range correlations ($1.6 < |\Delta\eta| <1.8$) in various high-multiplicity classes using the low-multiplicity template fit method. The method allows to subtract the enhanced away-side jet fragments in high-multiplicity with respect to low-multiplicity events. Furthermore, it is free from systematic biases originating from non-flow effects. These results set a lower limit of event multiplicity on the flow signal. Furthermore, the flow measurements with the requirement of hard probes such as jets or leading particles are presented. The results are compared to hydrodynamic calculations.
+Long- and short-range correlations for pairs of charged particles with two-particle angular correlations are studied in pp collisions at ${\sqrt{{\textit s}}}=13$~TeV and p--Pb collisions at ${\sqrt{s_\mathrm{NN}}} = 5.02$~TeV. The correlation functions are measured as functions of relative azimuthal angle $\Delta\varphi$ and pseudorapidity separation $\Delta\eta$ for pairs of primary charged particles within the pseudorapidity interval $|\eta| < 0.9$ and the transverse momentum interval 1~$ < \pt < $~4~GeV/$c$.
+Fourier coefficients are extracted for the long-range correlations ($1.6 < |\Delta\eta| <1.8$) in various high-multiplicity event classes using the low-multiplicity template fit method. The method allows to subtract the enhanced away-side jet fragments in high-multiplicity events with respect to low-multiplicity events. Furthermore, it is free from systematic biases originating from non-flow effects. These results set a lower limit of event multiplicity on the flow signal. Furthermore, the flow measurements with the requirement of hard probes such as jets or leading particles are presented. The results are compared to hydrodynamical model calculations.
 % findings , physics conclusion.
 % discovery?
 
@@ -67,8 +67,6 @@ Fourier coefficients are extracted for the long-range correlations ($1.6 < |\Del
 
 \newpage
 \appendix
-
-
 
 \clearpage
 
