--- a/sec_results.tex
+++ b/sec_results.tex
@@ -20,20 +20,20 @@
 \end{figure}
 
 Two-dimensional correlation distributions in pp collisions at $\sqrt{s}=13$ TeV are shown in Fig.~\ref{fig:doubleridge} for the high-multiplicity (0--0.1\%, left), low-multiplicity (60--90\%, middle), and the subtracted one as (0--5)\%-$F$(60--100\%) on the right. Similarly, the ones in p--Pb collisions at $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV are shown in Fig.~\ref{fig:doubleridgepPb}. The $F$ values can be found in Tables~\ref{tab:Fpp} and \ref{tab:Fpb}, which come from the LM-template fit in a given multiplicity percentile as described in Sec.~\ref{sec:ana}. 
-The $z$-axis for the correlation yield is properly scaled in order to zoom in the larger $\Delta\eta$ region. As a result, the jet peaks are sheared off in both figures. The flow modulation structure is clearly observed in the HM class while it is not seen in the LM-template. The away-side regions are populated mostly by back-to-back jet correlations for the HM and LM events but they are reduced and compatible to the one in near side in $\Delta\eta > 1.6$. The jet peak in near-side region is remaining in the LM subtracted ones and the LM-template fit uses only $1.6< \Delta\eta < 1.8$.
+The $z$-axis for the correlation yield is properly scaled in order to zoom in the larger $\Delta\eta$ region. As a result, the jet peaks are sheared off in both figures. The flow modulation structure is clearly observed in the HM class while it is not seen in the LM-template. The away-side regions are populated mostly by back-to-back jet correlations but they are reduced and compatible to the one in near side in $\Delta\eta > 1.6$. The jet peak in near-side region is remaining in the LM subtracted ones and the LM-template fit uses only $1.6< \Delta\eta < 1.8$.
 
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.8 \textwidth]{figures/Fig2_vn.pdf} 
-	\caption{The magnitude of $v_2$ (left) and $v_3$ (right) as a function of $p_\mathrm{T}$. The results are compared to ATLAS measurements~\cite{Aaboud:2016yar}. Note that the event multiplicity definition, $p_{\mathrm{T},assoc}$ range, and $|\Delta\eta|$ acceptance are different.}
+	\caption{The magnitude of $v_2$ (left) and $v_3$ (right) as a function of $p_\mathrm{T}$. The results are compared to ATLAS measurements~\cite{ATLAS:2016yzd}. Note that the event multiplicity definition, $p_{\mathrm{T},assoc}$ range, and $|\Delta\eta|$ acceptance are different.}
 	\label{fig:vn}
 \end{figure}
 
-The extracted $v_2$ and $v_3$ are shown as a function of $p_{\mathrm{T},\mathrm{trig}}$ in Fig.~\ref{fig:vn}. These results are obtained from the $\sqrt{s}=13$ TeV pp LM-template fits for the high multiplicity percentile of the 0--0.1\%. The results are compared with the results by ATLAS where the same method was used to extract the flow coefficients~\cite{Aaboud:2016yar}. Even though the $\Delta\eta$ and $p_{\mathrm{T},\mathrm{assoc}}$ ranges are wider in the ATLAS results at $2.0<|\Delta\eta|<5.0$ and $0.5<p_{\mathrm{T},assoc}<5\,\mathrm{GeV}/c$, respectively, the results are consistent within uncertainties. This is expected because the $\eta$ and multiplicity dependencies of $v_n$ are expected to be small and $p_{\mathrm{T}}$ ranges are similar. Both results indicate that the overall magnitudes of the $v_n$ are larger at higher values of $p_{\mathrm{T},\mathrm{trig}}$, with maximum between $2.5<p_{\mathrm{T},\mathrm{trig}}<3.0$ GeV/c, which is similar to the results from Pb--Pb collisions~\cite{ALICE:2018yph}.
+The extracted $v_2$ and $v_3$ are shown as a function of $p_{\mathrm{T},\mathrm{trig}}$ in Fig.~\ref{fig:vn}. These results are obtained from the $\sqrt{s}=13$ TeV pp LM-template fits for the high multiplicity percentile of the 0--0.1\%. The results are compared with the results by ATLAS where the same method was used to extract the flow coefficients~\cite{ATLAS:2016yzd}. Even though the $\Delta\eta$ and $p_{\mathrm{T},\mathrm{assoc}}$ ranges are wider in the ATLAS results at $2.0<|\Delta\eta|<5.0$ and $0.5<p_{\mathrm{T},assoc}<5\,\mathrm{GeV}/c$, respectively, the results are consistent within uncertainties. This is expected because the $\eta$ and multiplicity dependencies of $v_n$ are expected to be small and $p_{\mathrm{T}}$ ranges are similar. Both results indicate that the overall magnitudes of the $v_n$ are larger at higher values of $p_{\mathrm{T},\mathrm{trig}}$, with maximum between $2.5<p_{\mathrm{T},\mathrm{trig}}<3.0$ GeV/c, which is similar to the results from Pb--Pb collisions~\cite{ALICE:2018yph}.
 
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=0.55 \textwidth]{figures/Fig6_v2Mult_allSystemsComp2.pdf} 
+	\includegraphics[width=0.99 \textwidth]{figures/Fig6_vnMult_allSystemsDataOnly.pdf} 
 	\caption{The $v_2$ magnitude for two different collision systems, pp and p-Pb, as a function of multiplicity in the mid-rapidity. Additionally, two different $p_\mathrm{T}$-intervals, $1.0<p_\mathrm{T}<2.0$ GeV/c and $1.0<p_\mathrm{T}<4.0$ GeV/c, are presented for pp collisions. The systems are differentiated with two different markers, circles and rhombuses, for pp and p-Pb respectively. The $p_\mathrm{T}$ intervals, are differentiated with different colored markers; black for $1.0<p_\mathrm{T}<2.0$ GeV/c and red for the $1.0<p_\mathrm{T}<4.0$ GeV/c. In the bottom panel, the ratio $1.0<p_\mathrm{T}<4.0$ interval over the $1.0<p_\mathrm{T}<2.0$ GeV/c interval is presented for pp-collisions and the statistical and systematic errors are combined in quadrature.} 
 	\label{fig:v2mult}
 \end{figure}
@@ -46,7 +46,7 @@ For the two different $p_\mathrm{T}$ intervals presented for the pp collisions, 
 \subsection{Event-scale dependence}
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=0.6 \textwidth]{figures/Fig4_vn_LP.pdf}
+	\includegraphics[width=0.99 \textwidth]{figures/Fig4_vn_LP.pdf}
 	\caption{The magnitude of $v_2$ (top) and $v_3$ (bottom) as a function of the $\it{p}^{\rm{LP}}_{\rm{T,min}}$ (left) and $\it{p}^{\rm{jet}}_{\rm{T,min}}$ (right) in $\sqrt{s}=13$ pp collisions for $1<p_{\mathrm{T}}<2\,\mathrm{GeV}/c$ (red) and $1<p_{\mathrm{T}}<4\,\mathrm{GeV}/c$ (black). The filled circles and squares show measurement with ALICE. The statistical and systematic uncertainties are shown as vertical bars and boxes, respectively.}
 	\label{fig:LPjet23}
 \end{figure}    
@@ -61,7 +61,7 @@ Figure~\ref{fig:LPjet23} presents the extracted magnitude of $v_2$ and $v_3$ as 
 
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=0.9\textwidth]{figures/Fig6_v2Mult_allSystems_Hydro.pdf} 
+	\includegraphics[width=0.99\textwidth]{figures/Fig6_v2Mult_allSystems_Hydro.pdf} 
 	\caption{The $v_2$ (left) and $v_3$ (right) as a function of multiplicity in the mid-rapidity is compared to the hydrodynamic calculations. The blue and red markers represent the p--Pb and pp collision data points, respectively. The hydrodynamic calculations are presented with colored lines and bands marking their statistical uncertainty.} 
 	\label{fig:vnmult_model}
 \end{figure}
